tests/ui/len_zero.stderr
error: item `PubOne` has a public `len` method but no corresponding `is_empty` method
  --> $DIR/len_zero.rs:9:1
   |
9  |   impl PubOne {
   |  _^ starting here...
10 | |     pub fn len(self: &Self) -> isize {
11 | |         1
12 | |     }
13 | | }
   | |_^ ...ending here
   |
note: lint level defined here
  --> $DIR/len_zero.rs:4:9
   |
4  | #![deny(len_without_is_empty, len_zero)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: trait `PubTraitsToo` has a `len` method but no `is_empty` method
  --> $DIR/len_zero.rs:31:1
   |
31 |   pub trait PubTraitsToo {
   |  _^ starting here...
32 | |     fn len(self: &Self) -> isize;
33 | | }
   | |_^ ...ending here

error: item `HasIsEmpty` has a public `len` method but a private `is_empty` method
  --> $DIR/len_zero.rs:65:1
   |
65 |   impl HasIsEmpty {
   |  _^ starting here...
66 | |     pub fn len(self: &Self) -> isize {
67 | |         1
68 | |     }
69 | |
70 | |     fn is_empty(self: &Self) -> bool {
71 | |         false
72 | |     }
73 | | }
   | |_^ ...ending here

error: item `HasWrongIsEmpty` has a public `len` method but no corresponding `is_empty` method
   --> $DIR/len_zero.rs:94:1
    |
94  |   impl HasWrongIsEmpty {
    |  _^ starting here...
95  | |     pub fn len(self: &Self) -> isize {
96  | |         1
97  | |     }
98  | |
99  | |     pub fn is_empty(self: &Self, x : u32) -> bool {
100 | |         false
101 | |     }
102 | | }
    | |_^ ...ending here

error: length comparison to zero
   --> $DIR/len_zero.rs:106:8
    |
106 |     if x.len() == 0 {
    |        ^^^^^^^^^^^^
    |
note: lint level defined here
   --> $DIR/len_zero.rs:4:31
    |
4   | #![deny(len_without_is_empty, len_zero)]
    |                               ^^^^^^^^
help: consider using `is_empty`
    |     if x.is_empty() {

error: length comparison to zero
   --> $DIR/len_zero.rs:113:8
    |
113 |     if "".len() == 0 {
    |        ^^^^^^^^^^^^^
    |
help: consider using `is_empty`
    |     if "".is_empty() {

error: length comparison to zero
   --> $DIR/len_zero.rs:130:8
    |
130 |     if has_is_empty.len() == 0 {
    |        ^^^^^^^^^^^^^^^^^^^^^^^
    |
help: consider using `is_empty`
    |     if has_is_empty.is_empty() {

error: length comparison to zero
   --> $DIR/len_zero.rs:136:8
    |
136 |     if has_is_empty.len() != 0 {
    |        ^^^^^^^^^^^^^^^^^^^^^^^
    |
help: consider using `is_empty`
    |     if !has_is_empty.is_empty() {

error: length comparison to zero
   --> $DIR/len_zero.rs:142:8
    |
142 |     if has_is_empty.len() > 0 {
    |        ^^^^^^^^^^^^^^^^^^^^^^
    |
help: consider using `is_empty`
    |     if !has_is_empty.is_empty() {

error: length comparison to zero
   --> $DIR/len_zero.rs:151:8
    |
151 |     if with_is_empty.len() == 0 {
    |        ^^^^^^^^^^^^^^^^^^^^^^^^
    |
help: consider using `is_empty`
    |     if with_is_empty.is_empty() {

error: aborting due to 10 previous errors

